--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "darryldecode/cart": "^4.2",
         "guzzlehttp/guzzle": "^7.2",
         "hardevine/shoppingcart": "^3.1",
+        "kingflamez/laravelrave": "^4.2",
         "laravel/framework": "^9.19",
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
